# pj-assistant-bfa-go

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  railway.toml
agent/: .env.example  Dockerfile  pyproject.toml  railway.toml
agent/app/: __init__.py  config.py  graph.py  models.py  observability.py  security.py  server.py
agent/app/nodes/: __init__.py  analyzer.py  planner.py  retriever.py  synthesizer.py
agent/app/rag/: retriever.py  supabase_store.py
agent/data/knowledge_base/: faq_pj.txt  orientacoes_financeiras.txt  politica_credito.txt
agent/knowledge_base/: 01_conta_pj.md  04_boletos_pagamentos.md  05_analise_financeira.md  07_limites_favoritos.md  08_transferencias_agendadas.md  09_orientacoes_financeiras_pj.md
agent/scripts/: setup_supabase.py
agent/tests/: test_analyzer.py  test_planner.py  test_security.py
cmd/bfa/: main.go
deploy/: prometheus.yml
deploy/supabase/: 001_init.sql
docs/: ARCHITECTURE.md  CURLS_TESTE.md  FINANCIAL_CONTEXT_CONTRACT.md  FRONTEND_CHAT_CONTRACT.md  tutorial_chat_route.md
internal/chat/: client.go  context_providers.go  evaluation.go  handler.go  metrics.go  model.go  repository.go  repository_supabase.go  service.go  service_test.go  session.go  transcript.go  validators.go
internal/chatv2/: client.go  evaluation.go  handler.go  metrics.go  model.go  repository.go  service.go  (+5 more)
knowledge_base/: 01_conta_pj.md  02_pix.md  03_cartao_credito.md  06_seguranca_autenticacao.md  10_faq_geral.md
migrations/: 006_pix_receipts.sql
scripts/: cleanup_db.ps1
supabase/: config.toml
(+126 files in other folders)
